fix up some of the requirements for argp

--- a/software/usb_ir/win32/argp-standalone-1.3/CMakeLists.txt
+++ b/software/usb_ir/win32/argp-standalone-1.3/CMakeLists.txt
@@ -3,7 +3,7 @@ Message("Building argp-standalone-1.3 for argument parsing")
 Set(ARGPDIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "")
 Set(ARGPLIB argp CACHE INTERNAL "")
 
-add_definitions(-DHAVE_MALLOC_H)
+add_definitions(-DHAVE_MALLOC_H -DHAVE_STDARG_H -DHAVE_STRERROR)
 add_library(argp SHARED argp.def
     argp-ba.c
     argp-eexst.c
