* build svn version numbers in  * make sure the libraries necessary for igdaemon are installed so the service can start right away  * add the statically compiled svnversion.exe for windows builds  * turn argp back on in the linking

--- a/software/usb_ir/CMakeLists.txt
+++ b/software/usb_ir/CMakeLists.txt
@@ -113,7 +113,7 @@ add_executable(igdaemon ${DAEMONSRC}
 set_property(TARGET igdaemon
              APPEND PROPERTY COMPILE_DEFINITIONS SUPPORT_EXPORTS)
 target_link_libraries(igdaemon iguanaIR
-                               ${DAEMONLIBS} ${BASELIBS})# ${ARGPLIB})
+                               ${DAEMONLIBS} ${BASELIBS} ${ARGPLIB})
 install(TARGETS igdaemon DESTINATION /usr/bin)
 
 
@@ -124,7 +124,7 @@ add_subdirectory(drivers)
 add_executable(igclient client.c list.c ${BASESRC})
 set_property(TARGET igclient
              APPEND PROPERTY COMPILE_DEFINITIONS SUPPORT_EXPORTS)
-target_link_libraries(igclient iguanaIR ${BASELIBS})# ${ARGPLIB})
+target_link_libraries(igclient iguanaIR ${BASELIBS} ${ARGPLIB})
 install(TARGETS igclient DESTINATION /usr/bin)
 
 
