lirc-drv: Fix plugindocs generation.

--- a/software/usb_ir/iguanair-lirc/Makefile
+++ b/software/usb_ir/iguanair-lirc/Makefile
@@ -18,8 +18,6 @@ PLUGINDIR       ?= $(shell pkg-config --variable=plugindir lirc-driver)
 CONFIGDIR       ?= $(shell pkg-config --variable=configdir lirc-driver)
 PLUGINDOCS      ?= $(shell pkg-config --variable=plugindocs lirc-driver)
 
-include $(PLUGINDOCS)/plugindocs.mk
-
 $(driver).o: $(driver).c
 
 $(driver).so: $(driver).o
@@ -31,7 +29,8 @@ install: $(driver).so
 	install -D $(driver).html $(DESTDIR)$(PLUGINDOCS)/$(driver).html
 	install -Dm 644 60-blacklist-kernel-iguanair.conf \
            $(DESTDIR)/etc/modprobe.d/60-blacklist-kernel-iguanair.conf
-##	$(MAKE) update
+	-test -f $(DESTDIR)$(PLUGINDOCS)/Makefile && \
+	    $(MAKE) -C $(DESTDIR)$(PLUGINDOCS)
 
 clean:
 	rm -f *.o *.so
