--- a/software/usb_ir/files/systemd/usr/lib/systemd/system/iguanaIR.service
+++ b/software/usb_ir/files/systemd/usr/lib/systemd/system/iguanaIR.service
@@ -9,8 +9,7 @@ EnvironmentFile=/etc/default/iguanaIR
 ExecStart=/usr/bin/igdaemon $DRIVERS $OPTIONS \
                             --log-level=${LOGLEVEL} \
                             --send-timeout=${SENDTIMEOUT} \
-                            --receive-timeout=${RECEIVETIMEOUT} \
-                            -l /var/log/iguanaIR/iguanaIR.log
+                            --receive-timeout=${RECEIVETIMEOUT}
 
 [Install]
 WantedBy=multi-user.target
