Handle missing git version info...
Which also requires a 'make-dist' script, since I am too lazy
to do this properly in cmake. Really. That said, there is
a 'make dist', but you don't wan't to use it.

The versioning is tricky. The root is the fact that a file
containing the git hash cannot be committed, since the hash isn't
known until after the commit is made.

This setup supports two usecases:
  - Building from a git repo, obtaining version from git.
  - Building from a tarball created from make-dist, which contains the
    git version info found when creating the tarball.

It should degrade gracefully if neiher of these assumptions holds.

--- a/software/usb_ir/CMakeLists.txt
+++ b/software/usb_ir/CMakeLists.txt
@@ -15,6 +15,18 @@ Set(SO_AGE 3)
 
 Set(SOVERSION 0)
 
+# Source dist setup
+set(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-${FULLVER}")
+set(CPACK_SOURCE_IGNORE_FILES
+    "/build/;/.git/;~$;${CPACK_SOURCE_IGNORE_FILES}")
+set(CPACK_SOURCE_GENERATOR TGZ)
+include(CPack)
+add_custom_target(check_git
+                  COMMAND  echo "Checking git status:"
+                  COMMAND git status -s)
+add_custom_target(dist COMMAND ${CMAKE_MAKE_PROGRAM} package_source
+                  DEPENDS check_git)
+
 #Set(TARGET_ANDROID true)
 
 If(TARGET_ANDROID)
@@ -220,18 +232,23 @@ execute_process(COMMAND  git diff-index --quiet HEAD --
     RESULT_VARIABLE GIT_STATUS)
 execute_process(COMMAND git log -1 --format=format:%ci
     OUTPUT_VARIABLE GIT_WHEN)
-string(REGEX REPLACE ":[^:]+$" "" GIT_WHEN ${GIT_WHEN})
 if (${GIT_STATUS} EQUAL 0)
     Set(GIT_MOD "")
 else()
     set(GIT_MOD ":M")
 endif()
-set(GIT_VERSION "${GIT_HASH}${GIT_MOD}-${GIT_WHEN}")
 
 # Make config.h, release.h and version.h based on what we found
 configure_file(config.h.in ${CMAKE_SOURCE_DIR}/config.h)
 configure_file(release.h.in ${CMAKE_SOURCE_DIR}/release.h)
-configure_file(version.h.in ${CMAKE_SOURCE_DIR}/version.h)
+if (NOT "x_${GIT_HASH}" STREQUAL "x_")
+    set(GIT_VERSION "${GIT_HASH}${GIT_MOD}-${GIT_WHEN}")
+    string(REGEX REPLACE ":[^:]+$" "" GIT_WHEN ${GIT_WHEN})
+    configure_file(version.h.in ${CMAKE_SOURCE_DIR}/version.h)
+elseif (NOT EXISTS ${CMAKE_SOURCE_DIR}/version.h)
+    set(GIT_VERSION "(no git data available)")
+    configure_file(version.h.in ${CMAKE_SOURCE_DIR}/version.h)
+endif()
 
 # install all the other bits and pieces
 install(DIRECTORY files/base/etc
