Add missing manpages.
This patch adds simple manpages created using help2man. They are
a starting point, better than nothing, but could need some
polish.

The badly needed iguanaIR-reflasher manpage is still missing (this
script also lacks -h/--help  functionality.

--- a/software/usb_ir/CMakeLists.txt
+++ b/software/usb_ir/CMakeLists.txt
@@ -239,7 +239,7 @@ elseif (NOT EXISTS ${CMAKE_SOURCE_DIR}/version.h)
 endif()
 
 # install all the other bits and pieces
-install(DIRECTORY files/base/etc
+install(DIRECTORY files/base/etc files/base/usr
         DESTINATION /)
 install(FILES iguanaIR.h
         DESTINATION /usr/include)
