linker order matters, but apparently more so in gcc v5.4.0 on Ubuntu 16.04 and likely some others.  Interestingly gcc v6.3.1 on Fedora 25 worked before.

--- a/software/lirc-drv-iguanair/Makefile
+++ b/software/lirc-drv-iguanair/Makefile
@@ -31,7 +31,7 @@ PLUGINDOCS      ?= $(shell pkg-config --variable=plugindocs lirc-driver)
 $(driver).o: $(driver).c
 
 $(driver).so: $(driver).o
-	gcc --shared -fpic $(LDFLAGS) -o $@ $<
+	gcc --shared -fpic -o $@ $< $(LDFLAGS)
 
 install: $(driver).so
 	install -D $< $(DESTDIR)$(PLUGINDIR)/$<
