lirc driver build fix for OS X

--- a/software/lirc-drv-iguanair/Makefile
+++ b/software/lirc-drv-iguanair/Makefile
@@ -17,7 +17,12 @@ driver          = iguanair
 
 all:  $(driver).so
 
+# OS X requires an additional linker flag  TODO: is it really OS X or clang?
 LDFLAGS         += -lusb -liguanaIR -L../usb_ir/build
+ifeq ("$(shell uname)", "Darwin")
+  LDFLAGS       += -Wl,-undefined,dynamic_lookup
+endif
+
 CFLAGS          += -I../usb_ir
 MODPROBE_CONF   = 60-blacklist-kernel-iguanair.conf
 
