--- a/software/usb_ir/config.h.in
+++ b/software/usb_ir/config.h.in
@@ -1,4 +1,4 @@
 /* use the available clock_gettime */
-#cmakedefine USE_CLOCK_GETTIME 1
-#cmakedefine USE_MACH_ABSOLUTE_TIME 1
+#cmakedefine HAVE_CLOCK_GETTIME 1
+#cmakedefine HAVE_MACH_ABSOLUTE_TIME 1
 #cmakedefine HAVE_USB_10_LIBUSB_H 1
