--- a/software/usb_ir/drivers/CMakeLists.txt
+++ b/software/usb_ir/drivers/CMakeLists.txt
@@ -10,7 +10,7 @@ If("${CMAKE_SYSTEM_NAME}" MATCHES "Windows")
   Set(USBPRE1LIB ${CMAKE_SOURCE_DIR}/win32/libusb-win32/lib/msvc/libusb.lib)
   Set(SUPPORTSRCS ../win32/pipes.c ../support.c)
 Else()
-  Set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=default")
+  Set(USBPRE1LIB usb)
   If(NOT "${CMAKE_ARCH}" STREQUAL "arm")
     Set(COMPILE_NEW true)
     Set(EXCLUDE EXCLUDE_FROM_ALL)
@@ -22,31 +22,31 @@ EndIf()
 
 If(COMPILE_NEW)
   # build a driver that uses libusb version 1.0 or later
-  add_library(usb SHARED libusb.c ../list.c)
-  set_property(TARGET usb
+  add_library(usbdrv SHARED libusb.c ../list.c)
+  set_property(TARGET usbdrv
                APPEND PROPERTY COMPILE_DEFINITIONS DRIVER_EXPORTS)
   if("${HAVE_USB_10_LIBUSB_H}" EQUAL 1)
-      target_link_libraries(usb -lusb-1.0 iguanaIR)
+      target_link_libraries(usbdrv usb-1.0)
   else()
-      target_link_libraries(usb -lusb iguanaIR)
+      target_link_libraries(usbdrv usb)
   endif()
 
-  install(TARGETS usb
+  install(TARGETS usbdrv
           DESTINATION ${LIBDIR}/iguanaIR)
 EndIf()
 
 # optionally build a driver that uses libusb pre version 1.0
-add_library(usbpre1 SHARED ${EXCLUDE} libusbpre1.c ../list.c ${SUPPORTSRCS})
-set_property(TARGET usbpre1
+add_library(usbpre1drv SHARED ${EXCLUDE} libusbpre1.c ../list.c ${SUPPORTSRCS})
+set_property(TARGET usbpre1drv
              APPEND PROPERTY COMPILE_DEFINITIONS DRIVER_EXPORTS)
-target_link_libraries(usbpre1 ${USBPRE1LIB})
+target_link_libraries(usbpre1drv ${USBPRE1LIB})
 If(TARGET_ANDROID)
-  target_link_libraries(usbpre1 usb-compat-android)
-  install(TARGETS usbpre1
+  target_link_libraries(usbpre1drv usb-compat-android)
+  install(TARGETS usbpre1drv
           DESTINATION ${LIBDIR}/iguanaIR
           ${NEEDED})
 EndIf()
 
 If("${CMAKE_SYSTEM_NAME}" MATCHES "Windows")
-  set_target_properties(usbpre1 PROPERTIES RELEASE_OUTPUT_NAME "driver-libusb")
+  set_target_properties(usbpre1drv PROPERTIES RELEASE_OUTPUT_NAME "driver-libusb")
 EndIf()
